Adicionada funcionalidade de resetar senha

--- a/apps/backend/views/settings/preferencesTab.phtml
+++ b/apps/backend/views/settings/preferencesTab.phtml
@@ -6,17 +6,27 @@
                     <label style="font-size: 18px;"> Preferências</label>
                 </div>
                 <div class="form-group input-group col-sm-10">
+                    <span class="input-group-addon">Título Blog</span>
                     <input type="text" name="title_blog" class="form-control" value="<?= $title ?>" placeholder="TÍTULO DO BLOG">
                 </div>
                 <div class="form-group input-group col-sm-10">
                     <span class="input-group-addon"><i class="fa fa-link"></i></span>
                     <input type="text" name="url_project" class="form-control" value="<?= $url ?>" placeholder="URL">
                 </div>
-
                 <div class="form-group input-group col-sm-10">
-                    <a href="#" id="edit-preferences" class="col-sm-5 btn btn-primary btn-warning"><span class="glyphicon glyphicon-edit"></span> Alterar</a>
+
+                        <span class="input-group-addon"><i class="fa fa-google"></i> <i class="fa fa-envelope"></i></span>
+                        <input type="email" name="mail_project" class="form-control" value="<?= $mail ?>" placeholder="exemplo@gmail.com">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-asterisk"></i></span>
+                        <input type="password" name="mail_password" class="form-control" value="" placeholder="Senha da conta de email">
+                </div>
+                <div class="form-group input-group col-offset-2">
+                    <span><label style="color: #0066CC;">Este email é utilizado para fins administrativos. (Somente conta google)</label></span>
+                </div>
+                <div class="form-group input-group col-sm-10">
+                    <a href="#" id="edit-preferences" class="col-sm-5 btn btn-primary btn-warning"><span class="glyphicon glyphicon-edit"></span> Salvar Informações</a>
                     <?php if($user_type_id == 1){ ?>
-                        <a href="#" class="btn btn-primary btn-info" style="float:right;" id="theme-editor"><span class="glyphicon glyphicon-new-window"></span> Editar Aparência do Blog</a>
+                    <a href="#" class="btn btn-primary btn-info" style="float:right;" id="theme-editor"><span class="glyphicon glyphicon-new-window"></span> Editar Aparência do Blog</a>
                     <?php } ?>
                 </div>
             </form>
@@ -25,25 +35,24 @@
     <div class="col-lg-4">
         <div class="panel panel-warning">
             <div class="panel-heading">
-                Atenção!
+                <h5><b>Informações Importantes!</b></h5>
             </div>
             <div class="panel-body">
-
+                <b>Título Blog</b> <i class="fa fa-long-arrow-right"></i> Nome de exibição do blog. O nome inserido aqui será utilizado como nome do blog criado.
+                <hr>
+                <b>URL</b> <i class="fa fa-long-arrow-right"></i> Endereço do blog, por exemplo: www.blog.com.br. Este endereço deve ser o domínio criado para seu site. Utilizado para envio de emails e compartilhamento de conteúdo.
+                <hr>
+                <b>Email</b> <i class="fa fa-long-arrow-right"></i> A conta de email utilizada para envio de informações para usuários, como notificações ou novas senhas.
             </div>
             <div class="panel-footer">
-
             </div>
         </div>
     </div>
 </div>
-
 <script>
-
 $("#theme-editor").click(function(){
     window.open("<?= URL_PROJECT ?>appearance/index");
-
 });
-
 $("#edit-preferences").click(function(){
     var form = $("#preferences-form").serialize();
     $.ajax({
