--- a/apps/backend/views/login/index.phtml
+++ b/apps/backend/views/login/index.phtml
@@ -8,25 +8,32 @@
 </header>
 <div class="container container-fluidr center-block">
     <div class="content-login modal-content center-block">
-        <form name="login" id="login" class="form-horizontal " enctype="multipart/form-data" method="POST">
+        <form name="login" id="login" class="form" enctype="multipart/form-data" method="POST">
             <div class="form-group">
-                <div class="input-group col-sm-6 input-login">
+                <div class="input-group col-sm-10 input-login">
                     <span class="input-group-addon "><i class="glyphicon glyphicon-user"></i></span>
                     <input id="user" type="text" class="form-control form_login" name="user_login" id="user_login" value="" placeholder="Login ou e-mail">
                 </div>
             </div>
             <div class="form-group">
-                <div class="input-group col-sm-6 input-login">
+                <div class="input-group col-sm-10 input-login">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                     <input id="password" type="password" class="form-control form_login" name="user_passwd" id="user_passwd" placeholder="Senha">
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-sm-offset-5">
-                    <input type="button" class="container-fluid btn btn-lg btn-default" id="prosseguir" value="Entrar" />
+                <div class="input-group col-sm-6 input-login">
+                    <label>Esqueceu sua senha? <a href="<?= URL_PROJECT ?>login/newCodeResetPassword">clique aqui!</a></label>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group col-sm-10 input-login">
+                    <input type="button" class="btn btn-lg btn-primary btn-block" id="prosseguir" value="Entrar" />
                 </div>
             </div>
         </form>
+        <div>
+        </div>
     </div>
     <div class="clearfix"></div>
 </div>
