--- a/apps/backend/views/settings/facebookTab.phtml
+++ b/apps/backend/views/settings/facebookTab.phtml
@@ -22,10 +22,10 @@
     <div class="col-lg-4">
         <div class="panel panel-warning">
             <div class="panel-heading">
-                Atenção!
+               <h5><i class="fa fa-exclamation-triangle "></i> <b>Atenção!</b></h5>
             </div>
             <div class="panel-body">
-
+            <p>Inserindo sua página no facebook é possível monitorar as curtidas da mesma na página inicial do sistema</p>
             </div>
             <div class="panel-footer">
 
