--- a/apps/backend/views/settings/googleTab.phtml
+++ b/apps/backend/views/settings/googleTab.phtml
@@ -25,7 +25,7 @@
     <div class="col-lg-4">
         <div class="panel panel-warning">
             <div class="panel-heading">
-                Atenção!
+                <h5><i class="fa fa-exclamation-triangle "></i> <b>Atenção!</b></h5>
             </div>
             <div class="panel-body">
                 <p>Para configurar corretamente o Acesso a API do google pelo pluton, leia atentamente a documentação da mesma antes de inserir
