--- a/apps/backend/views/settings/twitterTab.phtml
+++ b/apps/backend/views/settings/twitterTab.phtml
@@ -30,13 +30,13 @@
     <div class="col-lg-4">
         <div class="panel panel-warning">
             <div class="panel-heading">
-                Atenção!
+                <h5><i class="fa fa-exclamation-triangle "></i> <b>Atenção!</b></h5>
             </div>
             <div class="panel-body">
-
+            <p>O APP ID e APP SECRET são fornecidos pelo twitter ao criar um APP do mesmo na página <a href="https://apps.twitter.com/">https://apps.twitter.com/</a>. Para mais informãções acesse a API do twitter. </p>
             </div>
             <div class="panel-footer">
-
+            <a href="https://dev.twitter.com/rest/public" target="_blank">DOCUMENTAÇÃO API TWITTER</a>
             </div>
         </div>
     </div>
