--- a/apps/backend/views/statistics/index.phtml
+++ b/apps/backend/views/statistics/index.phtml
@@ -39,7 +39,7 @@
                             <i class="fa fa-3x fa-exchange"></i>
                         </div>
                         <div class="col-xs-9 text-right">
-                            <div class="huge">R$<?= $total_sessions?>0,00</div>
+                            <div class="huge">R$<?= $earnings?>0,00</div>
                             <div>Ganhos</div>
                         </div>
                     </div>
