--- a/apps/backend/views/settings/preferencesTab.phtml
+++ b/apps/backend/views/settings/preferencesTab.phtml
@@ -23,6 +23,14 @@
                 <div class="form-group input-group col-offset-2">
                     <span><label style="color: #0066CC;">Este email é utilizado para fins administrativos. (Somente conta google)</label></span>
                 </div>
+                <div class="form-group input-group col-offset-2">
+                    <div class="col-sm-12">
+                        <label>Sobre o Blog:</label>
+                    </div>
+                    <div class="col-sm-12">
+                        <textarea name="post_content" id="inputPost_content" class="form-control" rows="3" required="required"></textarea>
+                    </div>
+                </div>
                 <div class="form-group input-group col-sm-10">
                     <a href="#" id="edit-preferences" class="col-sm-5 btn btn-primary btn-warning"><span class="glyphicon glyphicon-edit"></span> Salvar Informações</a>
                     <?php if($user_type_id == 1){ ?>
@@ -35,7 +43,7 @@
     <div class="col-lg-4">
         <div class="panel panel-warning">
             <div class="panel-heading">
-                <h5><b>Informações Importantes!</b></h5>
+               <h5> <i class="fa fa-exclamation-triangle "></i> <b>Informações Importantes!</b></h5>
             </div>
             <div class="panel-body">
                 <b>Título Blog</b> <i class="fa fa-long-arrow-right"></i> Nome de exibição do blog. O nome inserido aqui será utilizado como nome do blog criado.
@@ -57,7 +65,7 @@ $("#edit-preferences").click(function(){
     var form = $("#preferences-form").serialize();
     $.ajax({
         url: "<?= URL_PROJECT ?>settings/updatePreferences",
-        data: form,
+        data: form + '&blog_about=' + tinyMCE.activeEditor.getContent(),
         dataType: 'json',
         type: "POST",
         success: function(data){
@@ -78,5 +86,34 @@ $("#edit-preferences").click(function(){
             }
         }
     });
+});
+
+
+/**
+ * Carrega o editor wysiwyg tinymce para edição de uma nova postagem
+ */
+tinymce.init({
+    selector: "textarea",
+    theme: "modern",
+    height : 300,
+    width: 600,
+    init_instance_callback: "insert_contents",
+    plugins: [
+        "advlist autolink lists link image charmap print preview hr anchor pagebreak",
+        "searchreplace wordcount visualblocks visualchars code fullscreen",
+        "insertdatetime media nonbreaking save table contextmenu directionality",
+        "emoticons template paste textcolor colorpicker textpattern imagetools"
+    ],
+    toolbar1: "insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image",
+    toolbar2: "print preview media | forecolor backcolor emoticons",
+    image_advtab: true,
+    templates: [
+        {title: 'Test template 1', content: 'Test 1'},
+        {title: 'Test template 2', content: 'Test 2'}
+    ],
+    entity_encoding : "raw",
+    title: 'post_content',
+    language: 'pt_BR'
+
 });
 </script>
