--- a/apps/frontend/views/index/navBar.phtml
+++ b/apps/frontend/views/index/navBar.phtml
@@ -4,7 +4,6 @@
         margin-top: -70px !important;
     }
 </style>
-
 <div>
     <nav id="top-navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
@@ -16,11 +15,21 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="<?= URL_PROJECT ?>" data-id="title"><?= html_entity_decode($layout->layout_title) ?></a>
+                <a class="navbar-brand" href="<?= URL_PROJECT ?>" data-id="title"><?= html_entity_decode($blog_name) ?></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" data-id="navbar" id="navbar">
-                <?= html_entity_decode($layout->layout_navbar) ?>
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="<?= URL_PROJECT ?>" data-id="home" id="home"><?= html_entity_decode($layout->layout_menu1) ?></a>
+                    </li>
+                    <li>
+                        <a href="<?= URL_PROJECT ?>index/about" data-id="about" id="about"><?= html_entity_decode($layout->layout_menu2) ?></a>
+                    </li>
+                    <li>
+                        <a href="<?= URL_PROJECT ?>index/contact" data-id="contact" id="contact"><?= html_entity_decode($layout->layout_menu3) ?></a>
+                    </li>
+                </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -28,4 +37,4 @@
     </nav>
 </div>
 <div class="page-header" data-id="subtitle">
-    <?= html_entity_decode($layout->layout_subtitle) ?>
+<?= html_entity_decode($layout->layout_subtitle) ?>
