--- a/apps/frontend/views/index/footer.phtml
+++ b/apps/frontend/views/index/footer.phtml
@@ -1,3 +1,3 @@
 <div data-id="footer" id="footer" class="col-lg-12">
-    <?= html_entity_decode($layout->layout_footer) ?>
+    <?= stripslashes(html_entity_decode($layout->layout_footer)) ?>
 </div>
